feat: align app repo to 4-repo architecture and strengthen security/observability docs/tests